[package]
name = "lake-pulse"
version = "0.3.0"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "A Rust library for analyzing data lake table health across multiple formats and storage providers."
rust-version = "1.88"
keywords = ["delta-lake", "iceberg", "data-lake", "table-health", "analytics"]
categories = ["filesystem", "data-structures", "database"]
authors = ["Andrei Ionescu <webdev.andrei@gmail.com>"]
repository = "https://github.com/adobe/lake-pulse"
exclude = [ "examples/data/**/*" ]

[features]
default = []
hudi = []
lance = ["dep:lance", "dep:lance-index"]
paimon = ["dep:apache-avro"]
experimental = ["hudi", "lance", "paimon"]
all = ["hudi", "lance", "paimon"]

[dependencies]
tokio = { version = "1", features = ["full"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

deltalake = { version = "0.31", features = ["deltalake-aws", "deltalake-azure"] }
deltalake-azure = "0.14"
deltalake-aws = "0.14"
iceberg = { version = "0.8.0", features = ["storage-all"] }
lance = { version = "2.0", optional = true }
lance-index = { version = "2.0", optional = true }
apache-avro = { version = "0.21", optional = true, features = ["zstandard"] }

object_store = { version = "0.13", features = ["aws", "azure", "gcp", "http"] }
url = "2.5"
async-trait = "0.1"
thiserror = "2.0"
futures = { version = "0.3", features = ["std"] }
bytes = "1.0"
chrono = "0.4"
log = "0.4.28"
parquet = "58.0"
hdfs-native-object-store = "0.16"

[dev-dependencies]
tempfile = "3.8"

[[example]]
name = "local_store_hudi"
required-features = ["hudi"]

[[example]]
name = "local_store_lance"
required-features = ["lance"]

[[example]]
name = "local_store_paimon"
required-features = ["paimon"]
